It is now possible to use MSSlidingPanelController with Storyboard. A new example using Storyboard has been added.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 Example/SlidingPanelController.xcodeproj/xcuserdata
 Example/SlidingPanelController.xcodeproj/project.xcworkspace/xcuserdata
+Examples/SlidingPanelController.xcodeproj/project.xcworkspace/xcuserdata
+Examples/SlidingPanelController.xcodeproj/xcuserdata
+Examples/SlidingPanelControllerStoryboard.xcodeproj/project.xcworkspace
+Examples/SlidingPanelControllerStoryboard.xcodeproj/xcuserdata
