--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Examples/SlidingPanelController.xcodeproj/project.xcworkspace/xcuserdata
 Examples/SlidingPanelController.xcodeproj/xcuserdata
 Examples/SlidingPanelControllerStoryboard.xcodeproj/project.xcworkspace
 Examples/SlidingPanelControllerStoryboard.xcodeproj/xcuserdata
+.DS_Store
